apps/argocd/argocd-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-ingress
  namespace: argocd
  annotations:
    cert-manager.io/cluster-issuer: "private-ca"
spec:
  ingressClassName: traefik
  tls:
  - hosts:
    - argocd.i3sec.com.au
    secretName: argocd-tls
  rules:
    - host: argocd.i3sec.com.au
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: argocd-server
                port:
                  number: 80
